--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,18 @@ p{
     font-size: 18px;
     line-height: 1.5;
 }
+.icon i{
+    font-size: 40px;
+    margin: 30px 0 0 0;
+    text-align: center;
+    width: 70px;
+    height: 70px;
+    color: white;
+    background-color: black;
+    border-radius: 50%;
+    padding: 15px;
+    transition: 1s all;
+}
+.icon i:hover{
+    transform: scale(1.5);
+}
