--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -10,15 +10,22 @@ body{
     height: 100vh;
     padding: 20px;
     margin: 0 auto;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
 }
 .wrapper{
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-direction: column;
+        flex-direction: column;
     height: 870px;
     width: 600px;
     background-color: #f5f6fa;
